Add POJO support to jjq-mapper alongside records (issue #77)
Extend jjq-mapper and jjq-mapper-processor to support @JqMapped on
plain Java classes (POJOs) in addition to records.

POJO construction uses no-arg constructor + setter methods for
deserialization, and getter methods for serialization. Property discovery
follows a priority order: public fields (direct access) -> getter/setter
methods (getX/setX, isX for booleans) -> setAccessible as last resort.

Changes:
- ClassMapping.forClass(): POJO field discovery, no-arg constructor,
  setter-based population. Record path (forRecord) is unchanged.
- FieldMapping: add setter MethodHandle and writeValue() for POJOs.
  Record constructor (no setter, positional index) is unchanged.
- JqMapper.createMapping(): dispatch to forClass() for non-records
- TypeConverter: recognize @JqMapped POJOs in resolveKind() and
  toJqValue() for nested POJO serialization
- JqMapperProcessor: handle ElementKind.CLASS in addition to RECORD,
  add processClass() for field/getter/setter discovery
- MappingCodeGenerator.generateForClass(): setter-based deserialization,
  getter-based serialization code generation

Scope (v1): declared fields only (no superclass inheritance).

Tests: simple POJO, public fields, @JqIgnore, boolean isX() getter,
no-arg constructor error, round-trip. Processor test updated: @JqMapped
on class now succeeds, @JqMapped on interface still fails.

Closes #77.